# metis

./: .gitattributes  .gitignore  Dockerfile  Pipfile  Procfile  README.md  manage.py  package.json  pyproject.toml  requirements.txt  vite.config.js  vite.config.ts
.github/workflows/: docker_image.yml  tests.yml  tests_py.yml
epione/: apps.py  context_processors.py  urls.py  wsgi.py
epione/admin/: disciplines.py  faculties.py  places.py  users.py
epione/api/: routers.py  urls.py
epione/migrations/: 0001_initial.py
epione/models/: _demo_.md  _tables_.md  base.py  disciplines.py  faculties.py  places.py
epione/services/: mailer.py
epione/settings/: base.py  development.py  production.py
epione/site/: urls.py
epione/ugent_provider/: views.py
metis/: apps.py  context_processors.py  forms.py  model_translations.py  urls.py  wsgi.py
metis/admin/: __init__.py  base.py  disciplines.py  education_places.py  educations.py  emails.py  faculties.py  institutions.py  places.py  users.py
metis/api/: renderers.py  routers.py  urls.py
metis/migrations/: 0001_initial.py  0002_remove_tmp_audiologo.py  0003_tmp_data.py  0004_alter_period_program_internship.py  0005_remove_internship_is_valid_internship_status.py  0006_contact_is_admin.py  0007_emails_redux.py  0008_alter_emaillog_template.py  0009_student_is_active.py  0010_custom_forms_and_dates.py  0011_project_place_availability.py  0012_improve_email_log.py  0013_tweak_email_log.py  0014_custom_place_types.py  0015_link_forms_to_projects.py  0016_tweak_address.py  0017_fix_pending_migration.py  0018_questionings.py  0019_migrate_tmp_student_data.py  0020_signature_uuid.py  0021_questioning_email_add_office_in_bcc_and_more.py  0022_projectplace_is_active.py  0023_mentors.py  0024_remove_preferences.py  0025_timesheets.py  0026_signature_with_content_object.py  0027_internship_dates.py  0028_student_number.py  0029_encrypt_signatures.py  0030_delete_invitation.py  0031_evaluations.py  0032_absence_boolnull_approve.py  0033_evaluation_uuid.py  0034_alter_questioning_email_body_and_more.py  0035_rename_signed_text_signature_signed_text_encrypted.py  0036_alter_evaluation_options.py  0037_refactor_evaluations.py  0038_ruff_dj.py  0039_place_is_flagged.py  0040_internship_is_approved.py  (+20 more)
metis/models/: __init__.py  _tables_.md  base.py  disciplines.py  education_places.py  educations.py  emails.py  faculties.py  institutions.py  places.py  users.py  validators.py
metis/services/: cloner.py  configurator.py  cryptography.py  file_guard.py  form_builder.py  graph.py  inviter.py  mailer.py  mapbox.py  s3.py
metis/settings/: __init__.py  base.py  development.py  production.py  test.py
metis/site/: urls.py
metis/tasks/: __init__.py  cases.py  cleanup.py  emails.py  evaluations.py
metis/ugent_provider/: provider.py  views.py
metis/utils/: code.py  cryptography.py  dates.py  html.py
sparta/: apps.py  baker_recipes.py  context_processors.py  urls.py  wsgi.py
sparta/admin/: base.py  disciplines.py  faculties.py  places.py  users.py
sparta/api/: renderers.py  routers.py  urls.py
sparta/factories/: __init__.py  disciplines.py  places.py  users.py
sparta/migrations/: 0001_initial.py
sparta/models/: __init__.py  _tables_.md  base.py  disciplines.py  faculties.py  files.py  links.py  places.py  places__alt.py  projects.py  users.py
sparta/services/: mailer.py
sparta/settings/: base.py  development.py  production.py  test.py
sparta/site/: urls.py
sparta/ugent_provider/: provider.py  urls.py
tests/: conftest.py
tests/admin/: test_base_model.py
tests/api/: test_contact_email_management.py  test_contact_invitation.py  test_education_places.py  test_educations.py  test_emails.py  test_internship_evaluations.py  test_internship_timesheets.py  test_project_internships.py  test_project_places.py  test_project_places_availability.py  test_projects.py  test_propose_contacts.py  test_rel_addresses.py  test_rel_files.py  test_rel_remarks.py  test_rel_texts.py  test_user_search.py
(+674 files in other folders)
